fix spacing bug

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -751,6 +751,7 @@ h4{
 	.index-banner {
 		width: 100%;
 		display: block;
+		line-height: 0px;
 			img {
 				width: 100%;
 			}
